--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a target="_blank" href="https://www.instagram.com/agus_firman12"><i class="bx bxl-instagram-alt"></i></a>
                 <a target="_blank" href="https://www.linkedin.com/in/mohamad-agus-firmansah"><i class="bx bxl-linkedin"></i></a>
             </div>
-            <a href="" class="btn">Download CV</a>
+            <a href="cv/CV.pdf" download class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
