--- a/index.html
+++ b/index.html
@@ -1,137 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Website</title>
 
     <!-- boxicon link-->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!-- header section -->
     <header class="header">
-        <a href="#" class="logo">Portofolio.</a>
-        
-        
-        <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#portofolio">Portofolio</a>
-            <a href="#contact">Contact</a>
-        </nav>
+      <a href="#" class="logo">Portofolio.</a>
 
-        <i class="bx bx-moon" id="darkMode-icon"></i>
-        <i class="bx bx-menu" id="menu-icon"></i>
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#portofolio">Portofolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
+
+      <i class="bx bx-moon" id="darkMode-icon"></i>
+      <i class="bx bx-menu" id="menu-icon"></i>
     </header>
 
     <!-- home section -->
     <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello,My Name</h3>
-            <h1>Mohamad Agus Firmansah</h1>
-            <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Third year student majoring in software engineering technology who is very passionate about the world of web development</p>
-            <div class="social-media">
-                <a target="_blank" href="https://github.com/agusfirman12"><i class="bx bxl-github"></i></a>
-                <a target="_blank" href="https://www.instagram.com/agus_firman12"><i class="bx bxl-instagram-alt"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/in/mohamad-agus-firmansah"><i class="bx bxl-linkedin"></i></a>
-            </div>
-            <a href="cv/CV.pdf" download class="btn">Download CV</a>
+      <div class="home-content">
+        <h3>Hello,My Name</h3>
+        <h1>Mohamad Agus Firmansah</h1>
+        <h3>And I'm a <span class="multiple-text"></span></h3>
+        <p>
+          Third year student majoring in software engineering technology who is
+          very passionate about the world of web development
+        </p>
+        <div class="social-media">
+          <a target="_blank" href="https://github.com/agusfirman12"
+            ><i class="bx bxl-github"></i
+          ></a>
+          <a target="_blank" href="https://www.instagram.com/agus_firman12"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/mohamad-agus-firmansah"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
         </div>
+        <a
+          href="https://drive.google.com/file/d/1mpNpRSmwf1QMpRUH-GC0rVLjKOY5Ilpb/view?usp=sharing"
+          target="_blank"
+          class="btn"
+          >My Resume</a
+        >
+      </div>
 
-        <div class="home-img">
-            <img src="img/profile.png">
-        </div>
+      <div class="home-img">
+        <img src="img/profile.png" />
+      </div>
     </section>
 
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="img/profile.png">
-        </div>
+      <div class="about-img">
+        <img src="img/profile.png" />
+      </div>
 
-        <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <h3>Fullstack Web Developer</h3>
-            <p>I have three years of experience learning frontend web developer and backend web developer, and also master the MySQL database. I have completed several projects while I was studying which can be seen in the portfolio section. in two of my three projects, My role is as a fullstack developer.</p>
-            <h4>Programing <span>Skill</span></h4>
-            <div class="programing-skill">
-                <span><i class='bx bxl-html5' title="html5"></i></span>
-                <span><i class='bx bxl-css3' title="CSS3"></i></span>
-                <span><i class='bx bxl-javascript' title="javascript"></i></span>
-                <span><i class='bx bxl-php' title="php"></i></span>
-                <span><i class='bx bxl-bootstrap' title="bootstrap"></i></span>
-                <span><ion-icon name="logo-laravel" title="laravel"></ion-icon></span>
-            </div>
-            <a href="" class="btn">Read More</a>
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Fullstack Web Developer</h3>
+        <p>
+          I have three years of experience learning frontend web developer and
+          backend web developer, and also master the MySQL database. I have
+          completed several projects while I was studying which can be seen in
+          the portfolio section. in two of my three projects, My role is as a
+          fullstack developer. usually I work with Laravel and Tailwind, but i
+          learning react and nextJS rigth now.
+        </p>
+        <h4>Programing <span>Skill</span></h4>
+        <div class="programing-skill">
+          <span><i class="bx bxl-html5" title="html5"></i></span>
+          <span><i class="bx bxl-css3" title="CSS3"></i></span>
+          <span><i class="bx bxl-javascript" title="javascript"></i></span>
+          <span><i class="bx bxl-php" title="php"></i></span>
+          <span><i class="bx bxl-bootstrap" title="bootstrap"></i></span>
+          <span><i class="bx bxl-tailwind-css" title="tailwind"></i></span>
+          <span><ion-icon name="logo-laravel" title="laravel"></ion-icon></span>
+          <span><i class="bx bxl-react" title="react"></i></span>
         </div>
+        <a href="" class="btn">Read More</a>
+      </div>
     </section>
 
     <!-- portofolio section -->
     <section class="portofolio" id="portofolio">
-        <h2 class="heading">Latest <span>Project</span></h2>
+      <h2 class="heading">Latest <span>Project</span></h2>
 
-        <div class="portofolio-content">
-            <div class="portofolio-box">
-                <img src="img/smknukabat1.png">
-                <div class="portofolio-layer">
-                    <h4>SMK NU Kabat school website</h4>
-                    <p>SMK NU Kabat School Website which is useful for Information Media about the school</p>
-                    <a target="_blank" href="https://smknukabat.sch.id/"><i class="bx bx-link-external"></i></a>
-                </div>
-            </div>
-
-            <div class="portofolio-box">
-                <img src="img/tracerstudy1.png">
-                <div class="portofolio-layer">
-                    <h4>Tracer Study</h4>
-                    <p>Web based application for tracking alumni activities after graduating from SMK N Ihya Ulumudin Singojuruh</p>
-                    <a target="_blank" href="http://tracer.smkniu.sch.id/public/"><i class="bx bx-link-external"></i></a>
-                </div>
-            </div>
-
-            <div class="portofolio-box">
-                <img src="img/riasec1.png">
-                <div class="portofolio-layer">
-                    <h4>Personality Test RIASEC</h4>
-                    <p>Web based Personality Test Application using the RIASEC Method for SMKN Ihya Ulumudin Singojuruh</p>
-                    <a href="#"><i class="bx bx-link-external"></i></a>
-                </div>
-            </div>
+      <div class="portofolio-content">
+        <div class="portofolio-box">
+          <img src="img/nazmalogy.png" />
+          <div class="portofolio-layer">
+            <h4>NaZMaLogy Website</h4>
+            <p>
+              NaZMaLogy is a learning management system (LMS) website owned by
+              the NaZMa office company which is intended for educational media
+              to umkm clients.
+            </p>
+            <a target="_blank" href="https://nazmalogy.nazmaoffice.com/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
         </div>
+
+        <div class="portofolio-box">
+          <img src="img/smknukabat1.png" />
+          <div class="portofolio-layer">
+            <h4>SMK NU Kabat school website</h4>
+            <p>
+              SMK NU Kabat School Website which is useful for Information Media
+              about the school
+            </p>
+            <a target="_blank" href="https://smknukabat.sch.id/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portofolio-box">
+          <img src="img/tracerstudy1.png" />
+          <div class="portofolio-layer">
+            <h4>Tracer Study</h4>
+            <p>
+              Web based application for tracking alumni activities after
+              graduating from SMK N Ihya Ulumudin Singojuruh
+            </p>
+            <a target="_blank" href="http://tracer.smkniu.sch.id/public/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portofolio-box">
+          <img src="img/riasec1.png" />
+          <div class="portofolio-layer">
+            <h4>Personality Test RIASEC</h4>
+            <p>
+              Web based Personality Test Application using the RIASEC Method for
+              SMKN Ihya Ulumudin Singojuruh
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- contact section -->
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="#">
-            <div class="input-box">
-                <input type="text" name="name" id="name" placeholder="Fill Name">
-                <input type="email" name="email" id="email" placeholder="Email Address">
-            </div>
-            <div class="input-box">
-                <input type="number" name="number" id="number" placeholder="Mobile Number">
-                <input type="text" name="subject" id="subject" placeholder="Email Subject">
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" class="btn">
-            </div>
-        </form>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" name="name" id="name" placeholder="Fill Name" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="input-box">
+          <input
+            type="number"
+            name="number"
+            id="number"
+            placeholder="Mobile Number"
+          />
+          <input
+            type="text"
+            name="subject"
+            id="subject"
+            placeholder="Email Subject"
+          />
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Your Message"
+          ></textarea>
+          <input type="submit" value="Send Message" class="btn" />
+        </div>
+      </form>
     </section>
 
     <!-- footer section -->
     <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2023 by AFS | All Right Reserved.</p>
-        </div>
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by AFS | All Right Reserved.</p>
+      </div>
 
-        <div class="footer-iconTop">
-            <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
-        </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+      </div>
     </footer>
 
     <!-- reveal scroll javascript -->
@@ -141,10 +216,16 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- ion icon js -->
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
 
     <!-- javascript custom -->
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
